# cuhornet

./: .gitignore  .gitmodules  README.md
compiler-util/: CMakeLists.txt
hornet/: CMakeLists.txt
hornet/include/: Hornet.hpp
hornet/include/Core/: Hornet.cuh
hornet/include/Core/BatchUpdate/: BatchUpdate.cuh  BatchUpdate.i.cuh  BatchUpdateKernels.cuh
hornet/include/Core/HornetDevice/: Edge.cuh  Vertex.cuh
hornet/include/Core/HornetDevice/impl/: Edge.i.cuh  Vertex.i.cuh
hornet/include/Core/HornetInitialize/: HornetInitialize.i.cuh  HornetStaticInitialize.i.cuh
hornet/include/Core/HornetOperations/: HornetInsert.i.cuh  HornetQuery.i.cuh  HornetSort.i.cuh
hornet/include/Core/MemoryManager/: lrb.cuh
hornet/include/Core/MemoryManager/BlockArray/: BlockArray.cuh  BlockArray.i.cuh
hornet/include/Core/SoA/: SoAData.cuh  SoAPtr.cuh
hornet/include/Core/SoA/impl/: SoAData.i.cuh  SoADataSort.i.cuh  SoAPtr.i.cuh
hornet/include/Core/Static/: HornetStatic.cuh  Static.cuh
hornet/include/Util/: RandomGraphData.cuh
hornet/test/: HornetDeleteTest.cu  HornetInsertTest.cu  HornetInsertTestWeighted.cu  HornetMultiGPUInsertTest.cu  RMMBenchmark.cu
hornetsnest/: CMakeLists.txt
hornetsnest/include/: HornetAlg.hpp
hornetsnest/include/Dynamic/PageRank/: PageRank.cuh
hornetsnest/include/Static/BUBreadthFirstSearch/: BottomUpBFS.cuh
hornetsnest/include/Static/BetweennessCentrality/: bc.cuh
hornetsnest/include/Static/BreadthFirstSearch/: TopDown2.cuh
hornetsnest/include/Static/ClusteringCoefficient/: cc.cuh
hornetsnest/include/Static/ConnectedComponents/: CC.cuh
hornetsnest/include/Static/CoreNumber/: CoreNumber.cuh
hornetsnest/include/Static/KCore/: KCore.cuh
hornetsnest/include/Static/KTruss/: KTruss.cuh  KTruss.impl.cuh  KTrussOperators.cuh  KTrussSupport.cuh  KTrussWeighted.impl.cuh
hornetsnest/include/Static/KatzCentrality/: Katz.cuh  KatzTopK.cuh
hornetsnest/include/Static/PageRank/: PageRank.cuh
hornetsnest/include/Static/ShortestPath/: SSSP.cuh
hornetsnest/include/Static/SpMV/: SpMV.cuh
hornetsnest/include/Static/StrongCC/: scc.cuh
hornetsnest/include/Static/TriangleCounting/: triangle2.cuh
hornetsnest/src/Dynamic/KatzCentrality/: Katz.cu
hornetsnest/src/Dynamic/PageRank/: PageRank.cu
hornetsnest/src/Static/BetweennessCentrality/: bc.cu  exact_bc.cu
hornetsnest/src/Static/BottomUpBreadthFirstSearch/: BottomUpBFS.cu
hornetsnest/src/Static/BreadthFirstSearch/: TopDown2.cu
hornetsnest/src/Static/ClusteringCoefficient/: cc.cu
hornetsnest/src/Static/ConnectedComponents/: CC.cu
hornetsnest/src/Static/KCore/: KCore.cu
hornetsnest/src/Static/KTruss/: KTruss.cu  KTrussOperators.cuh  KTrussSupport.cu
hornetsnest/src/Static/PageRank/: PageRank.cu
hornetsnest/src/Static/ShortestPath/: SSSP.cu
hornetsnest/src/Static/SpMV/: SpMV.cu
hornetsnest/src/Static/StrongCC/: SCC.cu  SCCOperators.cuh
hornetsnest/src/Static/TriangleCounting/: triangle2.cu
hornetsnest/test/: BCMultiTest.cu  BCTest.cu  BFSTest2.cu  BUBFSTest2.cu  CCTest.cu  ClusCoeffTest.cu  CoreNumberTest.cu  KCoreTest.cu  KTrussTest.cu  KatzApproxTest.cu  KatzDynamicTest.cu  KatzTest.cu  KatzTopKTest.cu  PageRankTest.cu  SCCTest.cu  SSSPTest.cu  SpMVTest.cu  TriangleTest2.cu
primitives/: BufferPool.cuh  HornetAlg.cuh  HornetAlg.i.cuh  HostDeviceVar.cuh  HostDeviceVar.i.cuh  Operator++.cuh  Operator++.i.cuh  StandardAPI.hpp  StandardAPI.i.hpp
primitives/LoadBalancing/: BinarySearch.cuh  BinarySearch.i.cuh  BinarySearchKernel.cuh  lrbKernel_lb.cuh  lrb_lb.cuh  lrb_lb.i.cuh
primitives/Queue/: MultiLevelQueue.cuh  TwoLevelQueue.i.cuh
xlib/include/Device/Primitives/: CubWrapper.cuh
xlib/include/Device/Primitives/impl/: BinarySearchLB2.i.cuh
xlib/include/Device/Util/: CudaUtil.cuh  DeviceProperties.cuh  SafeCudaAPI.cuh
xlib/include/Device/Util/impl/: Basic.i.cuh  DeviceProperties.i.cuh
xlib/include/Host/: Basic.hpp  Metaprogramming.hpp  Numeric.hpp  PrintExt.hpp
xlib/include/Host/impl/: Basic.i.hpp  Metaprogramming.i.hpp  Numeric.i.hpp
xlib/src/Device/Primitives/: CubWrapper.cu
xlib/src/Device/Util/: CudaUtil.cpp  DeviceProperties.cpp  SafeCudaAPI.cpp
xlib/src/Graph/: GraphStd.cpp  GraphStdRead.cpp  GraphWeight.cpp  GraphWeightRead.cpp
xlib/src/Host/: PrintExt.cpp
